--- a/src/components/PurchasedProducts/style.purchasedProducts.scss
+++ b/src/components/PurchasedProducts/style.purchasedProducts.scss
@@ -1,6 +1,6 @@
 .PurchasedProducts-container {
     width: 90%;
-    margin: 0 auto;
+    margin: 0px auto 50px auto;
     display: flex;
     justify-content: center;
     align-items: center;
