--- a/src/components/Basket/style.basket.scss
+++ b/src/components/Basket/style.basket.scss
@@ -1,4 +1,105 @@
-.basket-container {
+.Basket-buy-container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.Basket-buy-message {
+    width: 80%;
+    height: 280px;
+    position: absolute;
+    bottom: 100%;
+    z-index: 2;
+}
+.Basket-buy-message-container {
+    margin: 0px auto;
+    background-color: #ffffff;
+    border-radius: 5px;
+    width: clamp(300px, 50vw, 400px);
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    p {
+        text-align: center;
+        letter-spacing: 1px;
+        width: 90%;
+        margin: 0 auto;
+    }
+    button {
+        width: 150px;
+        height: 35px;
+        margin: 0px 8px 25px 8px;
+        border-radius: 5px;
+        border: 1px solid black;
+        font-size: 18px;
+        background-color: #1fd7cb;
+        cursor: pointer;
+    }
+}
+.Basket-Forms-container {
+    width: 100%;
+    height: 435px;
+    position: absolute;
+    z-index: 2;
+    bottom: 100%;
+    padding-left: calc(50% - 165px);
+}
+.Basket-buy-container-div {
+    position: absolute;
+    z-index: 2;
+    bottom: 160%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: white;
+    width: clamp(325px, 40vw, 400px);
+    border-radius: 5px;
+        button {
+            width: 250px;
+            height: 40px;
+            display: block;
+            margin: 5px auto 25px auto;
+            background-color: #0166DA;
+            color: #ffffff;
+            border: 1px solid black;
+            border-radius: 5px;
+            font-size: 18px;
+            letter-spacing: 1px;
+            cursor: pointer;
+        }
+}
+
+
+
+
+
+
+
+
+
+.button-buy-all {
+    width: 300px;
+    height: 40px;
+    margin: 0px auto 50px auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 25px;
+    color: white;
+    background-color: #18766e;
+    border: 1px solid black;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 18px;
+    img {
+        width: 50px;
+        height: 50px;
+    }
+}
+.button-buy-all-enabled {
+    color: #ffffff94;
+    background-color: #18766e56;
+}
+.basket-container { border: 2px solid red;
     border: 2px solid white;
     width: 80%;
     margin: 0 auto;
@@ -6,7 +107,7 @@
     color: white;
     display: flex;
     gap: 50px;
-    margin-bottom: 25px;
+    margin-bottom: 50px;
 }
 .basket-container-div-one {
     width: 250px;
@@ -48,31 +149,34 @@
             font-size: clamp(20px, 2vw, 25px);
         }
     }
-    .basket-container-div-two-button {
-        display: flex;
-        align-items: center;
-        gap: 20px;
-        .Buy-button {
-            width: 120px;
-            height: 30px;
-            font-size: 18px;
-            border-radius: 10px;
-            background-color: #15795E;
-            color: white;
-            border: none;
-            letter-spacing: 1.5px;
-            cursor: pointer;
-            img {
-                width: 35px;
-            }
-        }
-        .delete-icon {
+}
+.basket-quantity-container-div {
+        button{
+            width: 35px;
+            height: 35px;
+            border-radius: 8px;
             font-size: 25px;
-            color: #E6615C;
+            background-color: white;
+            border: 1px solid black;
             cursor: pointer;
-            &:hover {
-                transform: scale(1.1);
-            }
+        }
+        span {
+            font-size: 18px;
+            margin: 0px 10px;
+        }
+}
+.basket-two-button {
+    width: max-content;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-top: 20px;
+    .delete-icon {
+        font-size: 25px;
+        color: #E6615C;
+        cursor: pointer;
+        &:hover {
+            transform: scale(1.1);
         }
     }
 }
@@ -81,33 +185,19 @@
     display: flex;
     flex-wrap: wrap;
     gap: 25px;
-    div {
-        height: max-content;
-    }
-    div button{
-        width: 35px;
-        height: 35px;
-        border-radius: 8px;
-        font-size: 25px;
-        background-color: white;
-        border: 1px solid black;
-        cursor: pointer;
-    }
-    span {
-        font-size: 18px;
-        margin: 0px 10px;
-    }
-    p {
+    p { 
         font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
         font-size: 20px;
         font-weight: 100;
         padding: 5px 0px;
         color: #4FCDC2;
         height: max-content;
+        margin-top: 25px;
     }
 }
 .div-no-products {
     width: 80%;
+    height: 55vh;
     margin: 0 auto;
     text-align: center;
     padding-top: 100px;
@@ -121,8 +211,11 @@
         gap: 10px;
     }
 }
-@media screen and (max-width: 600px){
-    .basket-container{
+@media screen and (max-width: 750px){
+    .Basket-buy-message {
+        width: 100%;
+    }
+    .basket-container{ 
         width: 98%;
         display: grid;
         grid-template-columns: 150px 95px 95px;
