--- a/src/components/Home/style.home.scss
+++ b/src/components/Home/style.home.scss
@@ -1,12 +1,11 @@
 .conteiner-products {
     width: 90%;
-    margin: 50px auto 0px auto;
+    margin: 50px auto;
     min-height: calc(100vh - 350px);
     display: flex;
     justify-content: center;
     gap: 25px;
     flex-wrap: wrap;
-
 }
 .conteiner-product {
     color: white;
