--- a/src/components/SingleProduct/style.singleProduct.scss
+++ b/src/components/SingleProduct/style.singleProduct.scss
@@ -335,7 +335,7 @@
         letter-spacing: 1.5px;
     }
 }
-.Buy-button {
+.SingleProduct-Buy-button {
     width: 250px;
     height: 35px;
     border-radius: 15px;
