--- a/src/components/Registration/style.registration.scss
+++ b/src/components/Registration/style.registration.scss
@@ -36,6 +36,8 @@
     padding: 15px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     gap: 10px;
     input {
         padding-left: 10px;
